--- a/Reposteria/src/main/resources/messages_en.properties
+++ b/Reposteria/src/main/resources/messages_en.properties
@@ -6,7 +6,7 @@ accion.nuevo=New
 accion.recordar=Remember
 accion.registrar=Register
 accion.regresar=Go back
-aplicacion.titulo=TechShop
+aplicacion.titulo=Reposteria
 carrito.cantidad=Amount
 carrito.datos=Product Data
 carrito.facturar=Bill
@@ -32,13 +32,13 @@ login.password=Password
 login.username=User
 plantilla.bienvenido=User
 plantilla.categorias=Categories
-plantilla.derechos=TechShop All Rights Reserved 2023
+plantilla.derechos=Reposteria Artesanal All Rights Reserved 2023
 plantilla.productos=Products
 plantilla.pruebas=Test
 plantilla.idioma=Languaje
 plantilla.asociaciones=Asociations
 plantilla.consultas=Queries
-plantilla.suTienda=Your online store
+plantilla.suReposteria=The best cakes online
 plantilla.troles=roles
 plantilla.tusuario=User
 plantilla.usuarios=users
