--- a/Reposteria/src/main/resources/messages.properties
+++ b/Reposteria/src/main/resources/messages.properties
@@ -31,7 +31,7 @@ login.login=Autenticar
 login.password=Contrase\u00f1a
 login.username=Usuario
 plantilla.bienvenido=Usuario
-plantilla.categorias=Categorias
+plantilla.categorias=Productos
 plantilla.derechos=Reposteria Artesanal Derechos Reservados 2023
 plantilla.productos=Productos
 plantilla.pruebas=Pruebas
