--- a/Reposteria/src/main/resources/messages_es.properties
+++ b/Reposteria/src/main/resources/messages_es.properties
@@ -32,7 +32,7 @@ login.password=Contrase\u00f1a
 login.username=Usuario
 plantilla.bienvenido=Usuario
 plantilla.categorias=Categorias
-plantilla.derechos=Repsteria Artesanal Derechos Reservados 2023
+plantilla.derechos=Reposteria Artesanal Derechos Reservados 2023
 plantilla.productos=Productos
 plantilla.pruebas=Pruebas
 plantilla.idioma=Idioma
