--- a/Reposteria/src/main/resources/messages_en.properties
+++ b/Reposteria/src/main/resources/messages_en.properties
@@ -6,7 +6,7 @@ accion.nuevo=New
 accion.recordar=Remember
 accion.registrar=Register
 accion.regresar=Go back
-aplicacion.titulo=Reposteria
+aplicacion.titulo=Reposteria Artesanal
 carrito.cantidad=Amount
 carrito.datos=Product Data
 carrito.facturar=Bill
