--- a/Reposteria/src/main/resources/messages.properties
+++ b/Reposteria/src/main/resources/messages.properties
@@ -6,7 +6,7 @@ accion.nuevo=Nuevo
 accion.recordar=Recordar
 accion.registrar=Registrar
 accion.regresar=Regresar
-aplicacion.titulo=Reposteria
+aplicacion.titulo=Reposteria Artesanal
 carrito.cantidad=Cantidad
 carrito.datos=Datos del Producto
 carrito.facturar=Facturar
