--- a/Reposteria/src/main/resources/messages_en.properties
+++ b/Reposteria/src/main/resources/messages_en.properties
@@ -6,7 +6,7 @@ accion.nuevo=New
 accion.recordar=Remember
 accion.registrar=Register
 accion.regresar=Go back
-aplicacion.titulo=Reposteria Artesanal
+aplicacion.titulo= Lavanda Pasteler\u00eda Artesanal
 carrito.cantidad=Amount
 carrito.datos=Product Data
 carrito.facturar=Bill
@@ -32,9 +32,9 @@ login.password=Password
 login.username=User
 plantilla.bienvenido=User
 plantilla.categorias=Categories
-plantilla.derechos=Reposteria Artesanal All Rights Reserved 2023
+plantilla.derechos= Lavanda Pasteler\u00eda Artesanal All Rights Reserved 2023
 plantilla.productos=Products
-plantilla.pruebas=Test
+plantilla.pruebas= Other Options
 plantilla.idioma=Languaje
 plantilla.asociaciones=Asociations
 plantilla.consultas=Queries
