--- a/Reposteria/src/main/resources/messages_es.properties
+++ b/Reposteria/src/main/resources/messages_es.properties
@@ -6,7 +6,7 @@ accion.nuevo=Nuevo
 accion.recordar=Recordar
 accion.registrar=Registrar
 accion.regresar=Regresar
-aplicacion.titulo=Reposteria Artesanal
+aplicacion.titulo=Lavanda Pasteler\u00eda Artesanal
 carrito.cantidad=Cantidad
 carrito.datos=Datos del Producto
 carrito.facturar=Facturar
@@ -32,9 +32,9 @@ login.password=Contrase\u00f1a
 login.username=Usuario
 plantilla.bienvenido=Usuario
 plantilla.categorias=Categorias
-plantilla.derechos=Reposteria Artesanal Derechos Reservados 2023
+plantilla.derechos=Lavanda Pasteler\u00eda Artesanal Derechos Reservados 2023
 plantilla.productos=Productos
-plantilla.pruebas=Pruebas
+plantilla.pruebas= Opciones Adicionales
 plantilla.idioma=Idioma
 plantilla.asociaciones=Asociaciones
 plantilla.consultas=Consultas
